# backend/internal/controller/custom_controller.go
@@ -27,17 +27,53 @@ func (controller CustomController) Route(fiber *fiber.App) {
 // @Summary Register a batch 5
 // @Description Register a new batch 5
 // @Tags Custom
-// @Accept json
+// @Accept multipart/form-data
 // @Produce json
-// @Param request body model.Batch5Model true "Request Body"
+// @Param name formData string true "Name"
+// @Param email formData string true "Email"
+// @Param grade formData string true "Grade"
+// @Param nisn formData string true "NISN"
+// @Param school formData string true "School"
+// @Param regency formData string true "Regency"
+// @Param province formData string true "Province"
+// @Param motivation formData string true "Motivation"
+// @Param program_id formData string true "Program ID"
+// @Param file formData file true "Profile Picture" // Menambahkan parameter file
 // @Success 200 {object} model.GeneralResponse
 // @Router /custom/batch5 [post]
 func (controller CustomController) RegisterBatch5(c *fiber.Ctx) error {
 	var request model.Batch5Model
-	err := c.BodyParser(&request)
+	form, err := c.MultipartForm()
 	if err != nil {
 		return err
 	}
+
+	files := form.File["file"]
+	if len(files) == 0 {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": "No file uploaded",
+		})
+	}
+
+	file := files[0]
+
+	fileOpened, err := file.Open()
+	if err != nil {
+		return err
+	}
+
+	defer fileOpened.Close()
+
+	request.File = file
+	request.Name = form.Value["name"][0]
+	request.Email = form.Value["email"][0]
+	request.Grade = form.Value["grade"][0]
+	request.NISN = form.Value["nisn"][0]
+	request.School = form.Value["school"][0]
+	request.Regency = form.Value["regency"][0]
+	request.Province = form.Value["province"][0]
+	request.Motivation = form.Value["motivation"][0]
+	request.ProgramID = form.Value["program_id"][0]
 
 	otpCfg := model.SendOtpConfig{
 		SmtpHost:     controller.Config.Get("GOMAIL_SMTP_HOST"),
